[package]
name = "kunio-examples"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
kunio = { path = "../kunio", features = [] }

[dependencies]
futures = { version = "0.3" }

[[example]]
name = "kun"
path = "kun.rs"

[[example]]
name = "file"
path = "file.rs"

[[example]]
name = "blocking"
path = "blocking.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "bs"
path = "bs.rs"
